--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,11 @@
+/* 
+Orange color: #e67e22
+*/
+
+/* ------------------------------- */
+/* BASIC SETUP */
+/* ------------------------------- */
+
 * {
   margin: 0;
   padding: 0;
@@ -13,26 +21,17 @@ html {
   text-rendering: optimizeLegibility;
 }
 
+/* ------------------------------- */
+/* REUSABLE COMPONENTS */
+/* ------------------------------- */
+
 .row {
   max-width: 1140px;
   margin: 0 auto;
   /* this container will be centered */
 }
 
-header {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.705), rgba(0, 0, 0, 0.705)), url(img/hero.jpg);
-  height: 100vh;
-  background-size: cover;
-  background-position: center;
-}
-
-.hero-text-box {
-  position: absolute;
-  width: 1140px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
+/* HEADINGS */
 
 h1 {
   margin-top: 0;
@@ -44,6 +43,8 @@ h1 {
   letter-spacing: 1px;
   word-spacing: 4px;
 }
+
+/* BUTTONS */
 
 .btn:link,
 .btn:visited {
@@ -85,3 +86,60 @@ h1 {
   border: 1px solid #cf6d17;
   color: #fff;
 }
+
+/* ------------------------------- */
+/* HEADER */
+/* ------------------------------- */
+
+header {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.705), rgba(0, 0, 0, 0.705)), url(img/hero.jpg);
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+}
+
+.hero-text-box {
+  position: absolute;
+  width: 1140px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.logo {
+  height: 100px;
+  width: auto;
+  float: left;
+  margin-top: 20px;
+}
+
+.main-nav {
+  float: right;
+  list-style: none;
+  margin-top: 55px;
+}
+
+/* select all li elements inside main-nav */
+.main-nav li {
+  /* originally list elements are block elements */
+  display: inline-block;
+  margin-left: 40px;
+}
+
+/* main-nav select the li element and a element inside the li */
+.main-nav li a:link,
+.main-nav li a:visited {
+  padding: 8px 0;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 90%;
+  border-bottom: 2px solid transparent;
+  transition: border-bottom 0.2s,
+}
+
+.main-nav li a:hover,
+.main-nav li a:active {
+  border-bottom: 2px solid #e67e22;
+}
+
