finish cities feature

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -112,6 +112,34 @@ h2:after {
   margin-bottom: 10px;
 }
 
+.icon-small {
+  /* set it to inline block so we can set width */
+  display: inline-block;
+  width: 30px;
+  text-align: center;
+  color: #e67e22;
+  font-size: 120%;
+  line-height: 120%;
+  vertical-align: middle;
+  margin-top: -3px;
+  margin-right: 10px;
+}
+/* ------------- LINKS ------------- */
+a:link,
+a:visited {
+  color: #e67e22;
+  text-decoration: none;
+  padding-bottom: 1px;
+  border-bottom: 1px solid #e67e22;
+  transition: border-bottom 0.2s, color 0.2s
+}
+
+a:hover,
+a:active {
+  color: #555;
+  border-bottom: 1px solid transparent;
+}
+
 /* ------------- BUTTONS ------------- */
 
 .btn:link,
@@ -216,6 +244,11 @@ header {
 /* ------------------------------- */
 .section-features .long-copy {
   padding: 30px;
+  text-align: center;
+}
+
+.feature-text {
+  text-align: center;
 }
 
 
@@ -264,7 +297,9 @@ header {
 /* ------------------------------- */
 /* HOW IT WORKS */
 /* ------------------------------- */
-
+.section-steps {
+  background-color: #f4f4f4;
+}
 
 .steps-box:first-child {
   text-align: center;
@@ -299,9 +334,28 @@ header {
    font-size: 150%;
    margin-right: 25px;
 }
-
+.btn-app:link,
+.btn-app:visited {
+  border: 0;
+}
 .btn-app img {
   height: 50px;
   width: auto;
   margin-right: 10px;
 }
+
+/* ------------------------------- */
+/* CITIES */
+/* ------------------------------- */
+
+.box img {
+  width: 100%;
+  /* set image to be as wide as the box */
+  height: auto; 
+  margin-bottom: 15px;
+}
+
+.cities-feature {
+  margin-bottom: 5px;
+}
+
