--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -190,6 +190,7 @@ a:active {
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.705), rgba(0, 0, 0, 0.705)), url(img/hero.jpg);
   height: 100vh;
+  background-attachment: fixed;
   background-size: cover;
   background-position: center;
 }
@@ -357,5 +358,107 @@ header {
 
 .cities-feature {
   margin-bottom: 5px;
+}
+
+/* ------------------------------- */
+/* CUSTOMER TESTIMONIALS */
+/* ------------------------------- */
+
+.section-testimonials {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.801), rgba(0, 0, 0, 0.801)), url(img/back-customers.jpg);
+  background-size: cover;
+  color: #fff;
+  background-attachment: fixed;
+}
+
+blockquote {
+  padding: 2%;
+  font-style: italic;
+  line-height: 146%;
+  letter-spacing: 0.6px;
+  position: relative;
+  margin-top: 40px;
+}
+
+blockquote:before {
+  content: "\201C";
+  font-size: 500%;
+  display: block;
+  position: absolute;
+  top: -5px;
+  left: -5spx;
+}
+
+
+cite {
+  font-size: 90%;
+  margin-top: 25px;
+  display: block;
+}
+
+
+cite img {
+  height: 45px;
+  border-radius: 45px;
+  margin-right: 10px;
+  vertical-align: middle;
+}
+
+/* ------------------------------- */
+/* SIGN UP */
+/* ------------------------------- */
+
+.section-plans {
+  background-color: #f4f4f4;
+}
+
+.plan-box {
+  background-color: #fff;
+  border-radius: 10px;
+  /* 90% of the parent width */
+  width: 90%;
+  /* center it inside its parent */
+  margin-left: 5%;
+  box-shadow: 9px 12px 8px rgba(230, 223, 223, 0.63);
+}
+
+.plan-box div {
+  padding: 15px;
+  border-bottom: 1px solid rgb(226, 225, 225);
+}
+
+.plan-box div:first-child {
+  background-color: #fcfcfc;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+
+.plan-box div:last-child {
+  text-align: center;
+  border: 0;
+}
+
+.plan-price {
+  font-size: 300%;
+  font-weight: 100;
+  margin-bottom: 10px;
+  color: #e67e22;
+}
+
+.plan-price span {
+  font-size: 30%;
+  /* not 30% of the initial 20px, its 30% of its parent font-size which is plan price */
+  font-weight: 300;
+}
+.plan-price-meal {
+  font-size: 80%;
+}
+
+.plan-box ul {
+  list-style: none;
+}
+
+.plan-box ul li {
+  padding: 11px;
 }
 
