--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -143,7 +143,8 @@ a:active {
 /* ------------- BUTTONS ------------- */
 
 .btn:link,
-.btn:visited {
+.btn:visited,
+input[type=submit] {
   display: inline-block;
   padding: 10px 30px;
   font-weight: 300;
@@ -154,7 +155,8 @@ a:active {
 }
 
 .btn-full:link,
-.btn-full:visited {
+.btn-full:visited,
+input[type=submit] {
   background-color: #e67e22;
   border: 1px solid #e67e22;
   color: #fff;
@@ -168,12 +170,16 @@ a:active {
 }
 
 .btn:hover,
-.btn:active {
+.btn:active,
+input[type=submit]:hover,
+input[type=submit]:active { 
   background-color: #cf6d17;
 }
 
 .btn-full:hover,
-.btn-full:active {
+.btn-full:active,
+input[type=submit]:hover,
+input[type=submit]:active { 
   border: 1px solid #cf6d17;
 }
 
@@ -462,3 +468,36 @@ cite img {
   padding: 11px;
 }
 
+/* ------------------------------- */
+/* FORM */
+/* ------------------------------- */
+
+
+.section-form {
+    width: 60%;
+    margin: 0 auto;
+}
+
+input[type=text],
+input[type=email],
+select,
+textarea {
+  width: 100%;
+  padding: 7px;
+  border-radius: 3.5px;
+  border: 1px solid #ccc;
+  font-weight: 300;
+  font-size: 94%;
+}
+
+textarea {
+  height: 100px;
+}
+
+input[type=checkbox] {
+  margin: 10px 5px 10px 0;
+}
+
+/* get rid of border when we focus on those elements */
+
+*:focus {outline:none;}
