--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,19 +9,25 @@ Orange color: #e67e22
 * {
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-html {
+html,
+body {
   background-color: #fff;
   color: #555;
   font-family: 'Lato', sans-serif;
   font-size: 20px;
   font-weight: 300;
   text-rendering: optimizeLegibility;
+  overflow-x: hidden;
 }
 
-.clearfix {zoom: 1;}
+.clearfix {
+  zoom: 1;
+}
+
 .clearfix:after {
   content: '.';
   clear: both;
@@ -50,7 +56,7 @@ section {
 
 /* HEADINGS */
 
-h1, 
+h1,
 h2,
 h3 {
   font-weight: 300;
@@ -90,6 +96,7 @@ h2:after {
   margin: 0 auto;
   margin-top: 30px;
 }
+
 /* ------------- PARAGRAPHS ------------- */
 .long-copy {
   line-height: 145%;
@@ -124,6 +131,7 @@ h2:after {
   margin-top: -3px;
   margin-right: 10px;
 }
+
 /* ------------- LINKS ------------- */
 a:link,
 a:visited {
@@ -131,6 +139,7 @@ a:visited {
   text-decoration: none;
   padding-bottom: 1px;
   border-bottom: 1px solid #e67e22;
+  -webkit-transition: border-bottom 0.2s, color 0.2s;
   transition: border-bottom 0.2s, color 0.2s
 }
 
@@ -150,6 +159,7 @@ input[type=submit] {
   font-weight: 300;
   text-decoration: none;
   border-radius: 200px;
+  -webkit-transition: background-color 0.2s, border 0.2s, color 0.2s;
   transition: background-color 0.2s, border 0.2s, color 0.2s;
   /* general button style */
 }
@@ -172,14 +182,14 @@ input[type=submit] {
 .btn:hover,
 .btn:active,
 input[type=submit]:hover,
-input[type=submit]:active { 
+input[type=submit]:active {
   background-color: #cf6d17;
 }
 
 .btn-full:hover,
 .btn-full:active,
 input[type=submit]:hover,
-input[type=submit]:active { 
+input[type=submit]:active {
   border: 1px solid #cf6d17;
 }
 
@@ -194,6 +204,7 @@ input[type=submit]:active {
 /* ------------------------------- */
 
 header {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.705)), to(rgba(0, 0, 0, 0.705))), url(img/hero.jpg);
   background-image: linear-gradient(rgba(0, 0, 0, 0.705), rgba(0, 0, 0, 0.705)), url(img/hero.jpg);
   height: 100vh;
   background-attachment: fixed;
@@ -206,16 +217,26 @@ header {
   width: 1140px;
   top: 50%;
   left: 50%;
+  -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
 
 .logo {
-  height: 100px;
+  height: 90px;
   width: auto;
   float: left;
   margin-top: 20px;
 }
 
+.logo-black {
+  display: none;
+  height: 50px;
+  width: auto;
+  float: left;
+  margin: 5px 0;
+}
+
+/* Main nav */
 .main-nav {
   float: right;
   list-style: none;
@@ -238,12 +259,60 @@ header {
   text-transform: uppercase;
   font-size: 90%;
   border-bottom: 2px solid transparent;
-  transition: border-bottom 0.2s,
+  -webkit-transition: border-bottom 0.2s;
+  transition: border-bottom 0.2s
 }
 
 .main-nav li a:hover,
 .main-nav li a:active {
   border-bottom: 2px solid #e67e22;
+}
+
+/* Mobile nav */
+.mobile-nav-icon {
+  float: right;
+  margin-top: 30px;
+  cursor: pointer;
+  display: none;
+}
+
+.mobile-nav-icon i {
+  font-size: 285%;
+  color: #fff;
+}
+
+
+
+
+/* Sticky nav */
+.sticky {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.979);
+  -webkit-box-shadow: 0 3px 3px rgba(241, 240, 240, 0.938);
+          box-shadow: 0 3px 3px rgba(241, 240, 240, 0.938);
+  z-index: 9999;
+}
+
+.sticky .main-nav {
+  margin-top: 18px;
+}
+
+.sticky .main-nav li a:link,
+.sticky .main-nav li a:visited {
+  padding: 18.1px 0;
+  color: rgb(117, 117, 117);
+  font-size: 87%;
+}
+
+.sticky .logo {
+  display: none;
+}
+
+.sticky .logo-black {
+  display: block;
 }
 
 /* ------------------------------- */
@@ -265,6 +334,7 @@ header {
 .section-meals {
   padding: 0;
 }
+
 .meals-showcase {
   list-style: none;
   width: 100%;
@@ -289,13 +359,18 @@ header {
   width: 100%;
   /* to assure that the image will be as wide as its container which is li element */
   height: auto;
+  -webkit-transform: scale(1.15);
   transform: scale(1.15);
   /* the img will be 115% big */
+  -webkit-transition: opacity 0.5s, -webkit-transform 0.5s;
+  transition: opacity 0.5s, -webkit-transform 0.5s;
   transition: transform 0.5s, opacity 0.5s;
+  transition: transform 0.5s, opacity 0.5s, -webkit-transform 0.5s;
   opacity: 0.7;
 }
 
 .meal-photo img:hover {
+  -webkit-transform: scale(1.03);
   transform: scale(1.03);
   opacity: 1;
 }
@@ -328,23 +403,26 @@ header {
 .works-step:last-of-type {
   margin-bottom: 90px;
 }
+
 .works-step div {
-   color: #e67e22;
-   border: 2px solid #e67e22;
-   display: inline-block;
-   border-radius: 50%;
-   height: 55px;
-   width: 55px;
-   text-align: center;
-   padding: 5px;
-   float: left;
-   font-size: 150%;
-   margin-right: 25px;
+  color: #e67e22;
+  border: 2px solid #e67e22;
+  display: inline-block;
+  border-radius: 50%;
+  height: 55px;
+  width: 55px;
+  text-align: center;
+  padding: 5px;
+  float: left;
+  font-size: 150%;
+  margin-right: 25px;
 }
+
 .btn-app:link,
 .btn-app:visited {
   border: 0;
 }
+
 .btn-app img {
   height: 50px;
   width: auto;
@@ -358,7 +436,7 @@ header {
 .box img {
   width: 100%;
   /* set image to be as wide as the box */
-  height: auto; 
+  height: auto;
   margin-bottom: 15px;
 }
 
@@ -371,6 +449,7 @@ header {
 /* ------------------------------- */
 
 .section-testimonials {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.801)), to(rgba(0, 0, 0, 0.801))), url(img/back-customers.jpg);
   background-image: linear-gradient(rgba(0, 0, 0, 0.801), rgba(0, 0, 0, 0.801)), url(img/back-customers.jpg);
   background-size: cover;
   color: #fff;
@@ -425,6 +504,7 @@ cite img {
   width: 90%;
   /* center it inside its parent */
   margin-left: 5%;
+  -webkit-box-shadow: 9px 12px 8px rgba(230, 223, 223, 0.63);
   box-shadow: 9px 12px 8px rgba(230, 223, 223, 0.63);
 }
 
@@ -456,6 +536,7 @@ cite img {
   /* not 30% of the initial 20px, its 30% of its parent font-size which is plan price */
   font-weight: 300;
 }
+
 .plan-price-meal {
   font-size: 80%;
 }
@@ -474,8 +555,8 @@ cite img {
 
 
 .section-form {
-    width: 60%;
-    margin: 0 auto;
+  width: 60%;
+  margin: 0 auto;
 }
 
 input[type=text],
@@ -500,4 +581,116 @@ input[type=checkbox] {
 
 /* get rid of border when we focus on those elements */
 
-*:focus {outline:none;}
+*:focus {
+  outline: none;
+}
+
+/* ------------------------------- */
+/* FOOTER */
+/* ------------------------------- */
+
+footer {
+  background-color: rgba(29, 28, 28, 0.877);
+  padding: 50px;
+  font-size: 80%;
+}
+
+.footer-nav {
+  list-style: none;
+  float: left;
+}
+
+.social {
+  list-style: none;
+  float: right;
+}
+
+.social i {
+  color: #888;
+}
+
+.footer-nav li,
+.social li {
+  display: inline-block;
+  margin-right: 20px;
+}
+
+.footer-nav li:last-child,
+.social li:last-child {
+  margin: 0px;
+}
+
+.footer-nav li a:link,
+.footer-nav li a:visited,
+.social li a:link,
+.social li a:visited {
+  text-decoration: none;
+  border: 0;
+  color: #888;
+  -webkit-transition: color 0.2s;
+  transition: color 0.2s;
+}
+
+.footer-nav li a:active,
+.footer-nav li a:hover {
+  color: #ddd;
+}
+
+.social li a:link,
+.social li a:visited {
+  font-size: 160%;
+}
+
+.ion-logo-googleplus,
+.ion-logo-twitter,
+.ion-logo-facebook,
+.ion-logo-instagram {
+  -webkit-transition: color 0.5s;
+  transition: color 0.5s;
+}
+
+
+.ion-logo-googleplus:hover {
+  color: #DD3B39;
+}
+
+.ion-logo-twitter:hover {
+  color: #00acec;
+}
+
+.ion-logo-facebook:hover {
+  color: #3b5996;
+}
+
+.ion-logo-instagram:hover {
+  color: rgb(139, 31, 153);
+}
+
+footer p {
+  flood-color: #888;
+  text-align: center;
+  margin-top: 20px
+}
+
+/* ------------------------------- */
+/* Animations */
+/* ------------------------------- */
+
+.js--wp-1,
+.js--wp-2,
+.js--wp-3 {
+  opacity: 0;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+}
+
+.js--wp-4 {
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+}
+
+.js--wp-1.animated,
+.js--wp-2.animated,
+.js--wp-3.animated {
+  opacity: 1;
+}
