--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -204,8 +204,8 @@ input[type=submit]:active {
 /* ------------------------------- */
 
 header {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.705)), to(rgba(0, 0, 0, 0.705))), url(img/hero.jpg);
-  background-image: linear-gradient(rgba(0, 0, 0, 0.705), rgba(0, 0, 0, 0.705)), url(img/hero.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.705)), to(rgba(0, 0, 0, 0.705))), url(img/hero-min.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.705), rgba(0, 0, 0, 0.705)), url(img/hero-min.jpg);
   height: 100vh;
   background-attachment: fixed;
   background-size: cover;
@@ -449,8 +449,9 @@ header {
 /* ------------------------------- */
 
 .section-testimonials {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.801)), to(rgba(0, 0, 0, 0.801))), url(img/back-customers.jpg);
-  background-image: linear-gradient(rgba(0, 0, 0, 0.801), rgba(0, 0, 0, 0.801)), url(img/back-customers.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.801)), to(rgba(0, 0, 0, 0.801))), url(img/back-customers-min.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.801), rgba(0, 0, 0, 0.801)), url(img/back-customers-min
+  .jpg);
   background-size: cover;
   color: #fff;
   background-attachment: fixed;
